sfdx-source/isvte_falcon/main/default/objects/DW_Session__c/DW_Session__c.object-meta.xml
<CustomObject>
    <description>Object to store DriveWealth Session information.</description>
    <label>DW Session</label>
    <nameField>
        <label>DW Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DW Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>