sfdx-source/isvte_falcon/main/default/objects/DW_Session__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Account ID</description>
    <inlineHelpText>Salesforce Account ID</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DW Sessions</relationshipLabel>
    <relationshipName>DW_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>