sfdx-source/isvte_falcon/main/default/objects/DW_Session__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows whether a session is still active.</description>
    <inlineHelpText>Shows whether a session is still active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>