sfdx-source/isvte_falcon/main/default/objects/DW_Session__c/fields/DW_Session_Key__c.field-meta.xml
<CustomField>
    <fullName>DW_Session_Key__c</fullName>
    <description>Session Key as supplied by DriveWealth after session is set</description>
    <inlineHelpText>Session Key as supplied by DriveWealth after session is set</inlineHelpText>
    <label>DW Session Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>